[Menu] Fixed z-index in the dropdown menu

--- a/src/components/menu/menu.less
+++ b/src/components/menu/menu.less
@@ -54,6 +54,7 @@
   position: absolute;
   top: 100%;
   left: 0;
+  z-index: 100;
 }
 
 .min-menu__dropdown-item {
